Table booking {
  booking_id int [pk, not null]
  tour_id int
  khach_hang_id int
  ngay_dat date
  ngay_khoi_hanh date
  ngay_ket_thuc date
  so_nguoi int
  tong_tien decimal(15,2)
  trang_thai varchar [note: 'enum(\'ChoXacNhan\',\'DaCoc\',\'HoanTat\',\'Huy\')']
  ghi_chu text
}

Table booking_history {
  id int [pk, not null]
  booking_id int [not null]
  trang_thai_cu varchar [note: 'enum(\'ChoXacNhan\',\'DaCoc\',\'HoanTat\',\'Huy\')']
  trang_thai_moi varchar [not null, note: 'enum(\'ChoXacNhan\',\'DaCoc\',\'HoanTat\',\'Huy\')']
  nguoi_thay_doi_id int
  ghi_chu text
  thoi_gian timestamp
}

Table checkin_khach {
  id int [pk, not null]
  diem_checkin_id int [not null]
  booking_id int [not null]
  trang_thai varchar [default: 'chua_checkin', note: 'enum(\'chua_checkin\',\'da_checkin\',\'vang_mat\',\'re_gio\')']
  thoi_gian_checkin datetime
  ghi_chu text
  nguoi_checkin_id int
  ngay_tao datetime
}

Table chung_chi_hdv {
  id int [pk, not null]
  nhan_su_id int [not null]
  ten_chung_chi varchar(255) [not null, note: 'Tên chứng chỉ/bằng cấp']
  loai_chung_chi varchar [not null, note: 'enum(\'HDV\',\'NgoaiNgu\',\'KyNang\',\'AnToan\',\'Khac\')']
  co_quan_cap varchar(255) [note: 'Nơi cấp']
  ngay_cap date
  ngay_het_han date [note: 'NULL nếu vô thời hạn']
  so_chung_chi varchar(100)
  file_dinh_kem varchar(255) [note: 'Link file scan chứng chỉ']
  trang_thai varchar [default: 'ConHan', note: 'enum(\'ConHan\',\'SapHetHan\',\'HetHan\')']
  ghi_chu text
  ngay_tao timestamp
}

Table danh_gia {
  danh_gia_id int [pk, not null]
  khach_hang_id int [not null]
  tour_id int
  nha_cung_cap_id int
  nhan_su_id int
  loai_danh_gia varchar [not null, note: 'enum(\'Tour\',\'NhaCungCap\',\'NhanSu\')']
  tieu_chi varchar(100) [note: 'ChatLuongTour, DichVu, HuongDanVien, GiaCa, etc']
  loai_dich_vu varchar(100) [note: 'Xe, KhachSan, NhaHang, VanChuyen, etc']
  diem int [not null]
  noi_dung text [not null]
  phan_hoi_admin text
  ngay_danh_gia datetime [not null]
  ngay_phan_hoi datetime
}

Table danh_gia_hdv {
  id int [pk, not null]
  tour_id int [not null]
  nhan_su_id int [not null, note: 'HDV được đánh giá']
  khach_hang_id int [note: 'Khách hàng đánh giá']
  diem_chuyen_mon tinyint [note: 'Điểm chuyên môn 1-5']
  diem_thai_do tinyint [note: 'Điểm thái độ 1-5']
  diem_giao_tiep tinyint [note: 'Điểm giao tiếp 1-5']
  diem_tong decimal(3,2) [note: 'Điểm tổng = TB 3 tiêu chí']
  noi_dung_danh_gia text [note: 'Nhận xét chi tiết']
  ngay_danh_gia timestamp
}

Table dich_vu_nha_cung_cap {
  id int [pk, not null]
  nha_cung_cap_id int [not null]
  ten_dich_vu varchar(255) [not null]
  mo_ta text
  loai_dich_vu varchar [not null, default: 'Khac', note: 'enum(\'KhachSan\',\'NhaHang\',\'Xe\',\'Ve\',\'VeMayBay\',\'DiemThamQuan\',\'Visa\',\'BaoHiem\',\'Khac\')']
  gia_tham_khao decimal(15,2)
  don_vi_tinh varchar(50)
  cong_suat_toi_da int
  thoi_gian_xu_ly varchar(120)
  tai_lieu_dinh_kem text
  trang_thai varchar [not null, default: 'HoatDong', note: 'enum(\'HoatDong\',\'TamDung\',\'NgungHopTac\')']
  created_at timestamp
  updated_at timestamp [note: 'on update current_timestamp()']
}

Table diem_checkin {
  id int [pk, not null]
  tour_id int [not null]
  ten_diem varchar(255) [not null]
  loai_diem varchar [default: 'tap_trung', note: 'enum(\'tap_trung\',\'tham_quan\',\'an_uong\',\'nghi_ngoi\',\'khac\')']
  thoi_gian_du_kien datetime
  ghi_chu text
  thu_tu int [default: 1]
  ngay_tao datetime
}

Table giao_dich_tai_chinh {
  id int [pk, not null]
  tour_id int
  loai varchar [note: 'enum(\'Thu\',\'Chi\')']
  so_tien decimal(15,2)
  mo_ta text
  ngay_giao_dich date
}

Table hieu_suat_hdv {
  id int [pk, not null]
  nhan_su_id int [not null]
  thang int [not null, note: 'Tháng 1-12']
  nam int [not null, note: 'Năm']
  so_tour_thang int [default: 0, note: 'Số tour trong tháng']
  so_ngay_lam_viec int [default: 0, note: 'Số ngày làm việc']
  doanh_thu_mang_lai decimal(15,2) [default: 0.00, note: 'Doanh thu tour đã dẫn']
  diem_danh_gia_tb decimal(3,2) [default: 0.00, note: 'Điểm TB từ khách hàng']
  so_khieu_nai int [default: 0, note: 'Số khiếu nại trong tháng']
  so_khen_thuong int [default: 0, note: 'Số lần được khen thưởng']
  ghi_chu text
  ngay_tao timestamp
}

Table hinh_anh_tour {
  id int [pk, not null]
  tour_id int
  url_anh varchar(255)
  mo_ta varchar(255)
}

Table hotel_room_assignment {
  id int [pk, not null]
  lich_khoi_hanh_id int [not null]
  booking_id int [not null]
  checkin_id int
  ten_khach_san varchar(255) [not null]
  so_phong varchar(50) [not null]
  loai_phong varchar(100) [default: 'Standard']
  so_giuong int [default: 1]
  ngay_nhan_phong date [not null]
  ngay_tra_phong date [not null]
  gia_phong decimal(15,2) [default: 0.00]
  trang_thai varchar [default: 'DaDatPhong', note: 'enum(\'DaDatPhong\',\'DaNhanPhong\',\'DaTraPhong\',\'Huy\')']
  ghi_chu text
  created_at timestamp
  updated_at timestamp [note: 'on update current_timestamp()']
}

Table khach_hang {
  khach_hang_id int [pk, not null]
  nguoi_dung_id int
  dia_chi varchar(255)
  gioi_tinh varchar [note: 'enum(\'Nam\',\'Nữ\',\'Khác\')']
  ngay_sinh date
}

Table lich_khoi_hanh {
  id int [pk, not null]
  tour_id int
  ngay_khoi_hanh date
  gio_xuat_phat time
  ngay_ket_thuc date
  gio_ket_thuc time
  diem_tap_trung varchar(255)
  so_cho int [default: 50]
  hdv_id int
  trang_thai varchar [note: 'enum(\'SapKhoiHanh\',\'DangChay\',\'HoanThanh\')']
  ghi_chu text
}

Table lich_lam_viec_hdv {
  id int [pk, not null]
  nhan_su_id int [not null]
  tour_id int [note: 'NULL nếu là ngày nghỉ/bận']
  loai_lich varchar [not null, note: 'enum(\'Tour\',\'NghiPhep\',\'Ban\',\'DatTruoc\'); Loại lịch làm việc']
  ngay_bat_dau date [not null]
  ngay_ket_thuc date [not null]
  ghi_chu text
  trang_thai varchar [default: 'DuKien', note: 'enum(\'DuKien\',\'XacNhan\',\'HoanThanh\',\'Huy\')']
  nguoi_tao_id int [note: 'Người tạo lịch (admin)']
  ngay_tao timestamp
  ngay_cap_nhat timestamp [note: 'on update current_timestamp()']
}

Table lich_su_yeu_cau {
  id int [pk, not null]
  yeu_cau_id int [not null]
  hanh_dong varchar(100) [not null]
  noi_dung text
  nguoi_thuc_hien_id int
  ngay_thuc_hien datetime
}

Table lich_trinh_tour {
  id int [pk, not null]
  tour_id int
  ngay_thu int
  dia_diem varchar(255)
  hoat_dong text
}

Table nguoi_dung {
  id int [pk, not null]
  ten_dang_nhap varchar(100)
  mat_khau varchar(255)
  ho_ten varchar(255)
  avatar varchar(255)
  email varchar(255)
  so_dien_thoai varchar(20)
  vai_tro varchar [note: 'enum(\'Admin\',\'HDV\',\'KhachHang\',\'NhaCungCap\')']
  quyen_cap_cao tinyint [default: 0]
  trang_thai varchar [default: 'HoatDong', note: 'enum(\'HoatDong\',\'BiKhoa\')']
  ngay_tao timestamp
}

Table nha_cung_cap {
  id_nha_cung_cap int [pk, not null]
  nguoi_dung_id int
  ten_don_vi varchar(255)
  loai_dich_vu varchar [note: 'enum(\'KhachSan\',\'NhaHang\',\'Xe\',\'Ve\',\'Visa\',\'BaoHiem\',\'Khac\')']
  dia_chi varchar(255)
  lien_he varchar(100)
  mo_ta text
  danh_gia_tb float
}

Table nhan_su {
  nhan_su_id int [pk, not null]
  nguoi_dung_id int
  vai_tro varchar [note: 'enum(\'HDV\',\'DieuHanh\',\'TaiXe\',\'Khac\')']
  loai_hdv varchar [default: 'TongHop', note: 'enum(\'NoiDia\',\'QuocTe\',\'ChuyenTuyen\',\'ChuyenDoan\',\'TongHop\'); Loại HDV']
  chuyen_tuyen varchar(255) [note: 'Các tuyến chuyên: Miền Bắc, Miền Trung, Miền Nam, Đông Nam Á...']
  danh_gia_tb decimal(3,2) [default: 0.00, note: 'Điểm đánh giá trung bình 0-5']
  so_tour_da_dan int [default: 0, note: 'Tổng số tour đã dẫn']
  trang_thai_lam_viec varchar [default: 'SanSang', note: 'enum(\'SanSang\',\'DangBan\',\'NghiPhep\',\'TamNghi\'); Trạng thái làm việc']
  chung_chi text
  ngon_ngu text
  kinh_nghiem text
  suc_khoe text
}

Table nhat_ky_tour {
  id int [pk, not null]
  tour_id int
  nhan_su_id int
  loai_nhat_ky varchar [default: 'hanh_trinh', note: 'enum(\'hanh_trinh\',\'su_co\',\'phan_hoi\',\'hoat_dong\'); Loại nhật ký: hành trình, sự cố, phản hồi khách, hoạt động']
  tieu_de varchar(255) [note: 'Tiêu đề nhật ký']
  noi_dung text
  cach_xu_ly text [note: 'Cách xử lý sự cố']
  hinh_anh text [note: 'JSON array chứa đường dẫn hình ảnh']
  ngay_ghi datetime
}

Table phan_bo_dich_vu {
  id int [pk, not null]
  lich_khoi_hanh_id int [not null]
  nha_cung_cap_id int
  loai_dich_vu varchar [not null, note: 'enum(\'Xe\',\'KhachSan\',\'VeMayBay\',\'NhaHang\',\'DiemThamQuan\',\'Visa\',\'BaoHiem\',\'Khac\')']
  ten_dich_vu varchar(255) [not null]
  so_luong int [default: 1]
  don_vi varchar(50)
  ngay_bat_dau date
  ngay_ket_thuc date
  gio_bat_dau time
  gio_ket_thuc time
  dia_diem varchar(255)
  gia_tien decimal(15,2)
  ghi_chu text
  trang_thai varchar [default: 'ChoXacNhan', note: 'enum(\'ChoXacNhan\',\'DaXacNhan\',\'TuChoi\',\'Huy\',\'HoanTat\')']
  thoi_gian_xac_nhan datetime
  created_at timestamp
  updated_at timestamp [note: 'on update current_timestamp()']
}

Table phan_bo_history {
  id int [pk, not null]
  phan_bo_id int [not null]
  loai_phan_bo varchar [not null, note: 'enum(\'NhanSu\',\'DichVu\')']
  thay_doi text [not null]
  nguoi_thay_doi_id int
  thoi_gian timestamp
}

Table phan_bo_nhan_su {
  id int [pk, not null]
  lich_khoi_hanh_id int [not null]
  nhan_su_id int [not null]
  vai_tro varchar [not null, note: 'enum(\'HDV\',\'TaiXe\',\'HauCan\',\'DieuHanh\',\'Khac\')']
  ghi_chu text
  trang_thai varchar [default: 'ChoXacNhan', note: 'enum(\'ChoXacNhan\',\'DaXacNhan\',\'TuChoi\',\'Huy\')']
  thoi_gian_xac_nhan datetime
  created_at timestamp
}

Table phan_hoi_danh_gia {
  id int [pk, not null]
  tour_id int
  nguoi_dung_id int
  loai varchar [note: 'enum(\'Tour\',\'DichVu\',\'NhaCungCap\')']
  diem int [note: 'Điểm đánh giá từ 1-5']
  noi_dung text
  ngay_danh_gia date
}

Table thong_bao_hdv {
  id int [pk, not null]
  nhan_su_id int [note: 'NULL = thông báo chung cho tất cả HDV']
  loai_thong_bao varchar [not null, note: 'enum(\'LichTour\',\'NhacNho\',\'CanhBao\',\'ThongBao\')']
  tieu_de varchar(255) [not null]
  noi_dung text [not null]
  uu_tien varchar [default: 'TrungBinh', note: 'enum(\'Thap\',\'TrungBinh\',\'Cao\',\'KhanCap\')']
  da_xem tinyint [default: 0]
  ngay_gui timestamp
  ngay_xem timestamp
}

Table tour {
  tour_id int [pk, not null]
  ten_tour varchar(255)
  loai_tour varchar [note: 'enum(\'TrongNuoc\',\'QuocTe\',\'TheoYeuCau\')']
  mo_ta text
  gia_co_ban decimal(15,2)
  chinh_sach text
  id_nha_cung_cap int
  tao_boi int
  trang_thai varchar [default: 'HoatDong', note: 'enum(\'HoatDong\',\'TamDung\',\'HetHan\')']
  qr_code_path varchar(255) [note: 'Đường dẫn file QR code']
}

Table tour_checkin {
  id int [pk, not null]
  booking_id int [not null]
  khach_hang_id int [not null]
  lich_khoi_hanh_id int
  ho_ten varchar(255) [not null]
  so_cmnd varchar(50)
  so_passport varchar(50)
  ngay_sinh date
  gioi_tinh varchar [default: 'Khac', note: 'enum(\'Nam\',\'Nu\',\'Khac\')']
  quoc_tich varchar(100) [default: 'Viß╗çt Nam']
  dia_chi text
  so_dien_thoai varchar(20)
  email varchar(255)
  checkin_time datetime
  checkout_time datetime
  trang_thai varchar [default: 'ChuaCheckIn', note: 'enum(\'DaCheckIn\',\'ChuaCheckIn\',\'DaCheckOut\')']
  ghi_chu text
  created_at timestamp
  updated_at timestamp [note: 'on update current_timestamp()']
}

Table v_hdv_san_sang {
  nhan_su_id int
  ho_ten varchar(255)
  email varchar(255)
  so_dien_thoai varchar(20)
  loai_hdv varchar [note: 'enum(\'NoiDia\',\'QuocTe\',\'ChuyenTuyen\',\'ChuyenDoan\',\'TongHop\')']
  chuyen_tuyen varchar(255)
  danh_gia_tb decimal(3,2)
  so_tour_da_dan int
  ngon_ngu text [not null, default: 'khac', note: 'on update current_timestamp()']
}

Table yeu_cau_dac_biet {
  id int [pk, not null]
  booking_id int [not null]
  loai_yeu_cau varchar [default: 'khac', note: 'enum(\'an_uong\',\'suc_khoe\',\'di_chuyen\',\'phong_o\',\'hoat_dong\',\'khac\')']
  tieu_de varchar(255) [not null]
  mo_ta text
  muc_do_uu_tien varchar [default: 'trung_binh', note: 'enum(\'thap\',\'trung_binh\',\'cao\',\'khan_cap\')']
  trang_thai varchar [default: 'moi', note: 'enum(\'moi\',\'dang_xu_ly\',\'da_giai_quyet\',\'khong_the_thuc_hien\')']
  ghi_chu_hdv text
  nguoi_tao_id int
  nguoi_xu_ly_id int
  ngay_tao datetime
  ngay_cap_nhat datetime
}

Ref: booking.tour_id > tour.tour_id [delete: cascade]
Ref: booking.khach_hang_id > khach_hang.khach_hang_id [delete: cascade]
Ref: booking_history.booking_id > booking.booking_id [delete: cascade]
Ref: booking_history.nguoi_thay_doi_id > nguoi_dung.id
Ref: checkin_khach.diem_checkin_id > diem_checkin.id [delete: cascade]
Ref: checkin_khach.booking_id > booking.booking_id [delete: cascade]
Ref: checkin_khach.nguoi_checkin_id > nhan_su.nhan_su_id
Ref: chung_chi_hdv.nhan_su_id > nhan_su.nhan_su_id [delete: cascade]
Ref: danh_gia_hdv.tour_id > tour.tour_id [delete: cascade]
Ref: danh_gia_hdv.nhan_su_id > nhan_su.nhan_su_id [delete: cascade]
Ref: danh_gia_hdv.khach_hang_id > khach_hang.khach_hang_id
Ref: dich_vu_nha_cung_cap.nha_cung_cap_id > nha_cung_cap.id_nha_cung_cap [delete: cascade]
Ref: diem_checkin.tour_id > tour.tour_id [delete: cascade]
Ref: giao_dich_tai_chinh.tour_id > tour.tour_id [delete: cascade]
Ref: hieu_suat_hdv.nhan_su_id > nhan_su.nhan_su_id [delete: cascade]
Ref: hinh_anh_tour.tour_id > tour.tour_id [delete: cascade]
Ref: hotel_room_assignment.booking_id > booking.booking_id [delete: cascade]
Ref: hotel_room_assignment.checkin_id > tour_checkin.id
Ref: khach_hang.nguoi_dung_id > nguoi_dung.id [delete: cascade]
Ref: lich_khoi_hanh.tour_id > tour.tour_id [delete: cascade]
Ref: lich_khoi_hanh.hdv_id > nhan_su.nhan_su_id
Ref: lich_lam_viec_hdv.nhan_su_id > nhan_su.nhan_su_id [delete: cascade]
Ref: lich_lam_viec_hdv.tour_id > tour.tour_id
Ref: lich_lam_viec_hdv.nguoi_tao_id > nguoi_dung.id
Ref: lich_su_yeu_cau.yeu_cau_id > yeu_cau_dac_biet.id [delete: cascade]
Ref: lich_su_yeu_cau.nguoi_thuc_hien_id > nguoi_dung.id
Ref: lich_trinh_tour.tour_id > tour.tour_id [delete: cascade]
Ref: nha_cung_cap.nguoi_dung_id > nguoi_dung.id [delete: cascade]
Ref: nhan_su.nguoi_dung_id > nguoi_dung.id [delete: cascade]
Ref: nhat_ky_tour.tour_id > tour.tour_id [delete: cascade]
Ref: nhat_ky_tour.nhan_su_id > nhan_su.nhan_su_id [delete: cascade]
Ref: phan_bo_dich_vu.lich_khoi_hanh_id > lich_khoi_hanh.id [delete: cascade]
Ref: phan_bo_dich_vu.nha_cung_cap_id > nha_cung_cap.id_nha_cung_cap
Ref: phan_bo_history.nguoi_thay_doi_id > nguoi_dung.id
Ref: phan_bo_nhan_su.lich_khoi_hanh_id > lich_khoi_hanh.id [delete: cascade]
Ref: phan_bo_nhan_su.nhan_su_id > nhan_su.nhan_su_id [delete: cascade]
Ref: phan_hoi_danh_gia.tour_id > tour.tour_id [delete: cascade]
Ref: phan_hoi_danh_gia.nguoi_dung_id > nguoi_dung.id [delete: cascade]
Ref: thong_bao_hdv.nhan_su_id > nhan_su.nhan_su_id [delete: cascade]
Ref: tour.id_nha_cung_cap > nha_cung_cap.id_nha_cung_cap
Ref: tour.tao_boi > nguoi_dung.id
Ref: tour_checkin.booking_id > booking.booking_id [delete: cascade]
Ref: tour_checkin.khach_hang_id > khach_hang.khach_hang_id [delete: cascade]
